# goQuant

./: CMakeLists.txt  README.md
.github/workflows/: ci-cd.yml
config/: default.json
docs/: API.md
include/api/: json_serializer.hpp  message_types.hpp  websocket_server.hpp
include/config/: config_manager.hpp
include/core/: advanced_orders.hpp  matching_engine.hpp  order_book.hpp  order_types.hpp  trade.hpp
include/fees/: fee_calculator.hpp
include/market_data/: market_data_feed.hpp
include/monitoring/: health_check.hpp  metrics_collector.hpp
include/persistence/: snapshot_manager.hpp
include/utils/: performance_counter.hpp  system_info.hpp  uuid_generator.hpp
scripts/: benchmark_runner.py  deploy.sh
scripts/docker/: Dockerfile  docker-compose.yml
scripts/monitoring/: prometheus.yml
src/: CMakeLists.txt  main.cpp
src/api/: json_serializer.cpp  websocket_server.cpp
src/config/: config_manager.cpp
src/core/: advanced_orders.cpp  matching_engine.cpp  order_book.cpp
src/fees/: fee_calculator.cpp
src/market_data/: market_data_feed.cpp
src/monitoring/: health_check.cpp
src/persistence/: snapshot_manager.cpp
src/scripts/: load_test.py
src/utils/: performance_counter.cpp  system_info.cpp  uuid_generator.cpp
tests/: CMakeLists.txt  test_matching_engine.cpp  test_order_book.cpp  websocket_client.py
